# anime-tiktok-reproducer

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  GOAL.md  GOAL_FAST.md  HETZNER_STORAGE_BOX_SETUP.md  N8N_SCHEDULED_UPLOAD.md  Premiere Pro Automation .md  README.md  import_project_working.js  package-lock.json  pixi.toml  prompt metadata.md
backend/: pyproject.toml
backend/app/: config.py  library_types.py  main.py
backend/scripts/: backfill_subtitle_sidecars.py  evaluate_matching_against_ground_truth.py  regenerate_import_project_jsx.py  upload_project_metadata.py
backend/tests/: conftest.py  test_account_service.py  test_anime_library.py  test_anime_matcher_cache.py  test_anime_matcher_partial_rematch.py  test_discord_service.py  test_downloader.py  test_drive_video_duration.py  test_ground_truth_validator.py  test_indexation_queue.py  test_instagram_drive_preparation.py  test_lan_transfer_routes.py  test_lan_transfer_service.py  test_library_hydration_service.py  test_llm_config_models.py  test_llm_config_service.py  test_managed_project_delete.py  test_match_playback_clip_store.py  test_matching_episode_options.py  test_media_binaries.py  test_meta_reel_duration_probe.py  test_openrouter_service.py  test_platform_duration_check.py  test_platform_reschedule_service.py  test_processing_overlay_jsx.py  test_processing_raw_scene_translation.py  test_project_duplication.py  test_project_model_reschedule_pending.py  test_project_resolution.py  test_pynv_decode.py  test_raw_scene_detector.py  test_reschedule_retry_service.py  test_runtime_memory_lifecycle.py  test_scene_aligner.py  test_scene_merger_manual_merge.py  test_scheduling_routes.py  test_scheduling_service.py  test_scheduling_tiktok_precedence.py  test_scheduling_v2_service.py  test_script_automation_overlay_templates.py  (+14 more)
server/: .env.example  .gitignore  Caddyfile  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
server/app/: config.py  main.py
server/config/: config.example.yaml
server/deploy/: nginx-tiktok-server.conf
server/scripts/: send_test_embed.py  smoke-test.sh
server/tests/: conftest.py  test_auth.py  test_config.py  test_discord_client.py  test_embed_builder.py  test_health.py  test_instagram_publisher.py  test_internal_api.py  test_internal_jobs_slot.py  test_job_model.py  (+7 more)
(+463 files in other folders)
