[project]
name = "anime-tiktok-reproducer"
version = "0.1.0"
description = "Web app to remaster TikToks by finding anime source clips and generating Premiere Pro projects"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.18",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "yt-dlp>=2024.12.0",
    "scenedetect[opencv]>=0.6.5",
    "faster-whisper>=1.1.0",
    "pillow>=10.0",
    "aiofiles>=24.1.0",
    "opencv-python>=4.10.0",
    "auto-editor>=28.0.0,<29.0.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
