[project]
name = "anime-tiktok-reproducer"
version = "0.1.0"
description = "Web app to remaster TikToks by finding anime source clips and generating Premiere Pro projects"
requires-python = ">=3.11"

# Dependencies are managed by pixi at the project root (pixi.toml)
# This file is kept for package metadata and build configuration only

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
